# Cache-managed OpenSSL installation produced by the vendor build.
# Use the unversioned linker names so this definition follows the version
# selected by VendorList.csv instead of assuming a particular SONAME.

cc_library(
    name = "boringssl_sdk",
    hdrs = glob(["include/openssl/*.h", "include/openssl/**/*.h"]),
    strip_include_prefix = "include",
    srcs = [
        "lib/libssl.so",
        "lib/libcrypto.so",
    ],
    visibility = ["//visibility:public"],
    alwayslink = True,
)

alias(
    name = "ssl",
    actual = ":boringssl_sdk",
    visibility = ["//visibility:public"],
)

alias(
    name = "crypto",
    actual = ":boringssl_sdk",
    visibility = ["//visibility:public"],
)
