load("@rules_cc//cc:defs.bzl", "cc_library")

# Package marker for functionsystem/src/

# src_root_inc: include-provider target.
# Adding deps = ["//functionsystem/src:src_root_inc"] to a cc_library
# provides -Ifunctionsystem/src/ enabling:
#   #include "common/logs/logging.h"
#   #include "common/status/status.h"
cc_library(
    name = "src_root_inc",
    includes = ["."],
    visibility = ["//visibility:public"],
)
