load("@rules_cc//cc:defs.bzl", "cc_library")
load("@yuanrong_functionsystem//bazel:yr.bzl", "COPTS")

# All common libraries, mirroring the CMake build structure.
#
# Include path strategy:
#   All targets receive -Ifunctionsystem/src/ transitively via
#   //functionsystem/src:src_root_inc. Root targets (logs, constants, types,
#   posix_pb) declare this dep explicitly; all others inherit it transitively.
#   This allows includes like: #include "common/proto/pb/posix/xxx.pb.h"
#                               #include "common/rpc/rpc_client.h"
#   matching the CMake include_directories(functionsystem/src/) setting.

# common_root_inc: include-provider for -Ifunctionsystem/src/common/.
# Used only by targets that need to include headers using the common/ directory
# as root (e.g. #include "aksk/aksk_helper.h" from within the aksk/ subdir).
# Depends on src_root_inc to transitively provide -Ifunctionsystem/src/.
cc_library(
    name = "common_root_inc",
    includes = ["."],
    deps = ["//functionsystem/src:src_root_inc"],
    visibility = ["//visibility:public"],
)

# --- logs: local logging wrapper headers ---
# Exposes common/logs/logging.h (and counter.h) which wrap the @logs_sdk API.
# Almost every library includes "common/logs/logging.h" via the -Ifunctionsystem/src/ path.
cc_library(
    name = "logs",
    hdrs = glob(["logs/*.h"]),
    copts = COPTS,
    deps = [
        "//common/logs:logs_sdk",
        "//functionsystem/src:src_root_inc",
    ],
    visibility = ["//visibility:public"],
)

# --- constants: header-only project-wide constants ---
# Exposes common/constants/*.h (constants.h, actor_name.h, metastore_keys.h, signal.h).
# Widely included across almost every module; propagated via :status dependency.
cc_library(
    name = "constants",
    hdrs = glob(["constants/*.h"]),
    copts = COPTS,
    deps = ["//functionsystem/src:src_root_inc"],
    visibility = ["//visibility:public"],
)

# --- types: header-only shared type definitions ---
cc_library(
    name = "types",
    hdrs = glob(["types/*.h"]),
    copts = COPTS,
    deps = [
        "//functionsystem/src/common:common_root_inc",
    ],
    visibility = ["//visibility:public"],
)

# --- posix_pb: pre-generated proto C++ files ---
# Mirrors CMake's posix_pb STATIC library.
# Uses the checked-in generated .cc files from common/proto/pb/posix/
# Also depends on Bazel-generated proto libraries for Bazel build.
cc_library(
    name = "posix_pb",
    srcs = glob(["proto/pb/posix/*.cc"]),
    hdrs = glob([
        "proto/pb/posix/*.h",
        "proto/pb/*.h",
    ]),
    copts = COPTS + ["-fvisibility=hidden"],
    deps = [
        ":common_root_inc",
        "//proto/posix:posix_protos_cc",
        "@com_google_protobuf//:protobuf",
        "@com_github_grpc_grpc//:grpc++",
        "@com_github_grpc_grpc//:gpr",
    ],
    visibility = ["//visibility:public"],
)

# --- utils_base: header-only subset of utils/ for use by lower-level targets ---
# Provides all utils headers that do NOT themselves include metadata or resource_view,
# breaking the metadata/resource_view → utils → metadata cycle.
# Targets like :metadata and :resource_view depend on this, while the full :utils
# implementation target depends on :metadata (no cycle).
cc_library(
    name = "utils_base",
    hdrs = glob(
        ["utils/*.h"],
        exclude = [
            "utils/meta_store_kv_operation.h",  # includes metadata.h
            "utils/struct_transfer.h",           # includes metadata.h and resource_type.h
        ],
    ),
    copts = COPTS,
    deps = [":status"],
    visibility = ["//visibility:public"],
)

# --- metadata ---
cc_library(
    name = "metadata",
    srcs = glob(["metadata/*.cpp"]),
    hdrs = glob(["metadata/*.h"]),
    copts = COPTS,
    deps = [
        ":posix_pb",
        ":status",
        ":resource_view_types",
        ":utils_base",
        "//functionsystem/src/meta_store/client/cpp:meta_store_types",
        "@nlohmann_json//:nlohmann_json",
        "@com_google_protobuf//:protobuf",
    ],
    visibility = ["//visibility:public"],
)

# --- status ---
cc_library(
    name = "status",
    srcs = glob(["status/*.cpp"]),
    hdrs = glob(["status/*.h"]),
    copts = COPTS + ["-fvisibility=hidden"],
    deps = [
        ":posix_pb",
        ":logs",
        ":constants",
        "//common/logs:logs_sdk",
        "@litebus//:litebus",
    ],
    visibility = ["//visibility:public"],
)

# --- heartbeat ---
cc_library(
    name = "heartbeat",
    srcs = glob(["heartbeat/*.cpp"]),
    hdrs = glob(["heartbeat/*.h"]),
    copts = COPTS,
    deps = [":status", ":constants", ":utils_base"],
    visibility = ["//visibility:public"],
)

# --- common_flags ---
cc_library(
    name = "common_flags",
    srcs = glob(["common_flags/**/*.cpp"]),
    hdrs = glob(["common_flags/**/*.h"]),
    copts = COPTS,
    deps = [":status", ":constants", ":utils_base"],
    visibility = ["//visibility:public"],
)

# --- hex ---
cc_library(
    name = "hex",
    srcs = glob(["hex/**/*.cpp"]),
    hdrs = glob(["hex/**/*.h"]),
    copts = COPTS,
    deps = [":status"],
    visibility = ["//visibility:public"],
)

# --- metrics_adapter ---
cc_library(
    name = "metrics_adapter",
    srcs = glob(["metrics/**/*.cpp"]),
    hdrs = glob(["metrics/**/*.h"]),
    copts = COPTS,
    deps = [
        ":status",
        ":metadata",
        ":resource_view_types",
        ":utils_base",
        ":common_flags",
        ":constants",
        "@etcdapi//:etcdapi",
        "//common/metrics:metrics_sdk",
    ],
    linkopts = ["-ldl"],
    visibility = ["//visibility:public"],
)

# --- rpc ---
cc_library(
    name = "rpc",
    srcs = glob(["rpc/**/*.cpp"]),
    hdrs = glob(["rpc/**/*.h"]),
    copts = COPTS + ["-fvisibility=hidden"],
    deps = [
        ":status",
        ":posix_pb",
        ":common_flags",
        ":utils_base",
        "@com_google_protobuf//:protobuf",
        "@com_github_grpc_grpc//:grpc++",
        "@com_github_grpc_grpc//:gpr",
        "//common/logs:logs_sdk",
    ],
    visibility = ["//visibility:public"],
)

# --- http ---
cc_library(
    name = "http",
    srcs = glob(["http/**/*.cpp"]),
    hdrs = glob(["http/**/*.h"]),
    copts = COPTS,
    deps = [
        ":rpc",
        ":status",
        ":hex",
        "@curl_sdk//:curl",
    ],
    visibility = ["//visibility:public"],
)

# --- aksk ---
cc_library(
    name = "aksk",
    srcs = glob(["aksk/**/*.cpp"]),
    hdrs = glob(["aksk/**/*.h"]),
    copts = COPTS,
    deps = [
        ":common_root_inc",
        ":status",
        ":common_flags",
        ":utils_base",
        ":hex",
        ":http",
    ],
    visibility = ["//visibility:public"],
)

# --- explorer ---
cc_library(
    name = "explorer",
    srcs = glob(["explorer/**/*.cpp"]),
    hdrs = glob(["explorer/**/*.h"]),
    copts = COPTS,
    deps = [
        ":rpc",
        ":kube_client",
        ":resource_lock",
        "//functionsystem/src/meta_store/client/cpp:meta_store_client",
    ],
    visibility = ["//visibility:public"],
)

# --- file_monitor ---
cc_library(
    name = "file_monitor",
    srcs = glob(["file_monitor/**/*.cpp"]),
    hdrs = glob(["file_monitor/**/*.h"]),
    copts = COPTS,
    deps = [":status", ":utils_base", ":posix_pb"],
    visibility = ["//visibility:public"],
)

# --- leader ---
cc_library(
    name = "leader",
    srcs = glob(["leader/**/*.cpp"]),
    hdrs = glob(["leader/**/*.h"]),
    copts = COPTS,
    deps = [
        ":status",
        ":rpc",
        ":resource_lock",
        ":explorer",
        "//functionsystem/src/meta_store/client/cpp:meta_store_client",
    ],
    visibility = ["//visibility:public"],
)

# --- meta_store_adapter ---
cc_library(
    name = "meta_store_adapter",
    srcs = glob(["meta_store_adapter/**/*.cpp"]),
    hdrs = glob(["meta_store_adapter/**/*.h"]),
    copts = COPTS,
    deps = [
        ":status",
        ":rpc",
        ":metadata",
        ":utils_base",
        "//functionsystem/src/meta_store/client/cpp:meta_store_client",
    ],
    visibility = ["//visibility:public"],
)

# --- network ---
cc_library(
    name = "network",
    srcs = glob(["network/**/*.cpp"]),
    hdrs = glob(["network/**/*.h"]),
    copts = COPTS,
    deps = [":status", ":utils_base"],
    visibility = ["//visibility:public"],
)

# --- profile ---
cc_library(
    name = "profile",
    srcs = glob(["profile/**/*.cpp"]),
    hdrs = glob(["profile/**/*.h"]),
    copts = COPTS,
    deps = [":status"],
    visibility = ["//visibility:public"],
)

# --- register ---
cc_library(
    name = "register",
    srcs = glob(["register/**/*.cpp"]),
    hdrs = glob(["register/**/*.h"]),
    copts = COPTS,
    deps = [":rpc", ":status", ":heartbeat"],
    visibility = ["//visibility:public"],
)

# --- resource_view_types: header-only resource type definitions ---
# Provides resource_type.h only, without any implementation or higher-level deps.
# Split out to break the cycle: resource_view → metrics_adapter → metadata → resource_view.
# Used by: metadata (for metadata_type.h), metrics_adapter (for metrics_adapter.h),
#          create_agent_decision, schedule_plugin_common, and resource_view itself.
cc_library(
    name = "resource_view_types",
    hdrs = glob(["resource_view/*.h"]),
    copts = COPTS,
    deps = [":posix_pb", ":status", ":constants"],
    visibility = ["//visibility:public"],
)

# --- resource_view ---
cc_library(
    name = "resource_view",
    srcs = glob(["resource_view/**/*.cpp"]),
    hdrs = glob(["resource_view/**/*.h"]),
    copts = COPTS,
    deps = [
        ":status",
        ":posix_pb",
        ":types",
        ":utils_base",
        ":resource_view_types",
        ":metrics_adapter",
    ],
    visibility = ["//visibility:public"],
)

# --- scheduler_topology ---
cc_library(
    name = "scheduler_topology",
    srcs = glob(["scheduler_topology/**/*.cpp"]),
    hdrs = glob(["scheduler_topology/**/*.h"]),
    copts = COPTS,
    deps = [":status"],
    visibility = ["//visibility:public"],
)

# --- service_json ---
cc_library(
    name = "service_json",
    srcs = glob(["service_json/**/*.cpp"]),
    hdrs = glob(["service_json/**/*.h"]),
    copts = COPTS,
    deps = [
        ":status",
        ":metadata",
        ":resource_view",
        ":yaml_tool",
        "@nlohmann_json//:nlohmann_json",
    ],
    visibility = ["//visibility:public"],
)

# --- kube_client ---
cc_library(
    name = "kube_client",
    srcs = glob(["kube_client/**/*.cpp"]),
    hdrs = glob(["kube_client/**/*.h"]),
    copts = COPTS,
    deps = [":status", ":http", ":metrics_adapter", "@nlohmann_json//:nlohmann_json"],
    visibility = ["//visibility:public"],
)

# --- resource_lock ---
cc_library(
    name = "resource_lock",
    srcs = glob(["resource_lock/**/*.cpp"]),
    hdrs = glob(["resource_lock/**/*.h"]),
    copts = COPTS,
    deps = [":status", ":kube_client", "//functionsystem/src/meta_store/client/cpp:meta_store_client"],
    visibility = ["//visibility:public"],
)

# --- file_storage ---
cc_library(
    name = "file_storage",
    srcs = glob(["file_storage/**/*.cpp"]),
    hdrs = glob(["file_storage/**/*.h"]),
    copts = COPTS,
    deps = [":status", ":kv_client"],
    visibility = ["//visibility:public"],
)

# --- trace_adapter ---
# Statically links OpenTelemetry from source via @opentelemetry_cpp Bazel targets.
cc_library(
    name = "trace_adapter",
    srcs = glob([
        "trace/*.cpp",
        "trace/exporter/*.cpp",
    ]),
    hdrs = glob([
        "trace/*.h",
        "trace/exporter/*.h",
    ]),
    copts = COPTS,
    defines = [
        "OPENTELEMETRY_STL_VERSION=2017",
    ],
    deps = [
        ":status",
        ":utils_base",
        ":posix_pb",
        "@opentelemetry_cpp//api:api",
        "@opentelemetry_cpp//sdk/src/trace:trace",
        "@opentelemetry_cpp//sdk/src/resource:resource",
        "@opentelemetry_cpp//exporters/otlp:otlp_grpc_exporter",
        "@opentelemetry_cpp//exporters/ostream:ostream_span_exporter",
    ],
    visibility = ["//visibility:public"],
)

# --- utils ---
cc_library(
    name = "utils",
    srcs = glob(["utils/*.cpp"]),
    hdrs = glob(["utils/*.h"]),
    copts = COPTS,
    deps = [
        ":status",
        ":metadata",
        ":hex",
        ":aksk",
        ":common_flags",
        ":metrics_adapter",
        ":posix_pb",
        ":constants",
        ":resource_view_types",
        ":scheduler",
    ],
    linkopts = ["-lcap"],
    visibility = ["//visibility:public"],
)

# --- yaml_tool ---
cc_library(
    name = "yaml_tool",
    srcs = glob(["yaml_tool/**/*.cpp"]),
    hdrs = glob(["yaml_tool/**/*.h"]),
    copts = COPTS,
    deps = [
        ":status",
        "@yaml-cpp//:yaml-cpp",
    ],
    visibility = ["//visibility:public"],
)

# --- kv_client ---
cc_library(
    name = "kv_client",
    srcs = glob(["kv_client/*.cpp"]),
    hdrs = glob(["kv_client/*.h"]),
    copts = COPTS,
    deps = [
        ":status",
        ":utils",
        "@datasystem_sdk//:datasystem_sdk",
        "//functionsystem/src/function_agent:function_agent_flags",
    ],
    visibility = ["//visibility:public"],
)

# --- create_agent_decision: header-only decision type ---
cc_library(
    name = "create_agent_decision",
    hdrs = glob(["create_agent_decision/*.h"]),
    copts = COPTS,
    deps = [":status", ":resource_view_types"],
    visibility = ["//visibility:public"],
)

# --- scheduler_framework_types: header-only scheduler framework definitions ---
# Split out to break the cycle: scheduler → schedule_plugin_common → scheduler_framework → scheduler
cc_library(
    name = "scheduler_framework_types",
    hdrs = glob([
        "scheduler_framework/**/*.h",
        "schedule_decision/scheduler_common.h",
    ]),
    copts = COPTS,
    deps = [":status", ":posix_pb", ":resource_view_types"],
    visibility = ["//visibility:public"],
)

# --- scheduler ---
# Aggregates scheduler/, schedule_decision/, scheduler_framework/
cc_library(
    name = "scheduler",
    srcs = glob([
        "scheduler/**/*.cpp",
        "schedule_decision/**/*.cpp",
        "scheduler_framework/**/*.cpp",
    ]),
    hdrs = glob([
        "scheduler/**/*.h",
        "schedule_decision/**/*.h",
        "scheduler_framework/**/*.h",
    ]),
    copts = COPTS,
    deps = [
        ":status",
        ":posix_pb",
        ":resource_view",
        ":create_agent_decision",
        ":schedule_plugin_common",
        "@litebus//:litebus",
    ],
    visibility = ["//visibility:public"],
)

# --- schedule_plugin_common ---
cc_library(
    name = "schedule_plugin_common",
    srcs = glob(["schedule_plugin/common/**/*.cpp"]),
    hdrs = glob(["schedule_plugin/common/**/*.h"]),
    copts = COPTS,
    deps = [
        ":status",
        ":posix_pb",
        ":resource_view",
        ":scheduler_framework_types",
    ],
    visibility = ["//visibility:public"],
)

# --- Schedule plugins (alwayslink for plugin registration) ---

cc_library(
    name = "default_prefilter",
    srcs = glob(["schedule_plugin/prefilter/default_prefilter/**/*.cpp"]),
    hdrs = glob(["schedule_plugin/prefilter/default_prefilter/**/*.h"]),
    copts = COPTS,
    deps = [":schedule_plugin_common"],
    alwayslink = True,
    visibility = ["//visibility:public"],
)

cc_library(
    name = "default_filter",
    srcs = glob(["schedule_plugin/filter/default_filter/**/*.cpp"]),
    hdrs = glob(["schedule_plugin/filter/default_filter/**/*.h"]),
    copts = COPTS,
    deps = [":schedule_plugin_common"],
    alwayslink = True,
    visibility = ["//visibility:public"],
)

cc_library(
    name = "resource_selector_filter",
    srcs = glob(["schedule_plugin/filter/resource_selector_filter/**/*.cpp"]),
    hdrs = glob(["schedule_plugin/filter/resource_selector_filter/**/*.h"]),
    copts = COPTS,
    deps = [":schedule_plugin_common"],
    alwayslink = True,
    visibility = ["//visibility:public"],
)

cc_library(
    name = "default_scorer",
    srcs = glob(["schedule_plugin/scorer/default_scorer/**/*.cpp"]),
    hdrs = glob(["schedule_plugin/scorer/default_scorer/**/*.h"]),
    copts = COPTS,
    deps = [":schedule_plugin_common"],
    alwayslink = True,
    visibility = ["//visibility:public"],
)

cc_library(
    name = "default_heterogeneous_filter",
    srcs = glob(["schedule_plugin/filter/default_heterogeneous_filter/**/*.cpp"]),
    hdrs = glob(["schedule_plugin/filter/default_heterogeneous_filter/**/*.h"]),
    copts = COPTS,
    deps = [":schedule_plugin_common", ":utils"],
    alwayslink = True,
    visibility = ["//visibility:public"],
)

cc_library(
    name = "default_heterogeneous_scorer",
    srcs = glob(["schedule_plugin/scorer/default_heterogeneous_scorer/**/*.cpp"]),
    hdrs = glob(["schedule_plugin/scorer/default_heterogeneous_scorer/**/*.h"]),
    copts = COPTS,
    deps = [":schedule_plugin_common", ":utils"],
    alwayslink = True,
    visibility = ["//visibility:public"],
)

cc_library(
    name = "label_affinity_filter",
    srcs = glob(["schedule_plugin/filter/label_affinity_filter/**/*.cpp"]),
    hdrs = glob(["schedule_plugin/filter/label_affinity_filter/**/*.h"]),
    copts = COPTS,
    deps = [":schedule_plugin_common"],
    alwayslink = True,
    visibility = ["//visibility:public"],
)

cc_library(
    name = "label_affinity_scorer",
    srcs = glob(["schedule_plugin/scorer/label_affinity_scorer/**/*.cpp"]),
    hdrs = glob(["schedule_plugin/scorer/label_affinity_scorer/**/*.h"]),
    copts = COPTS,
    deps = [":schedule_plugin_common"],
    alwayslink = True,
    visibility = ["//visibility:public"],
)

cc_library(
    name = "disk_filter",
    srcs = glob(["schedule_plugin/filter/disk_filter/**/*.cpp"]),
    hdrs = glob(["schedule_plugin/filter/disk_filter/**/*.h"]),
    copts = COPTS,
    deps = [":schedule_plugin_common"],
    alwayslink = True,
    visibility = ["//visibility:public"],
)

cc_library(
    name = "disk_scorer",
    srcs = glob(["schedule_plugin/scorer/disk_scorer/**/*.cpp"]),
    hdrs = glob(["schedule_plugin/scorer/disk_scorer/**/*.h"]),
    copts = COPTS,
    deps = [":schedule_plugin_common"],
    alwayslink = True,
    visibility = ["//visibility:public"],
)

# --- Aggregate: all schedule plugins (mirrors CMake PLUGIN_LIB with --whole-archive) ---
cc_library(
    name = "all_schedule_plugins",
    deps = [
        ":default_prefilter",
        ":default_filter",
        ":resource_selector_filter",
        ":default_scorer",
        ":default_heterogeneous_filter",
        ":default_heterogeneous_scorer",
        ":label_affinity_filter",
        ":label_affinity_scorer",
        ":disk_filter",
        ":disk_scorer",
    ],
    visibility = ["//visibility:public"],
)
