load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
load("@yuanrong_functionsystem//bazel:yr.bzl", "COPTS")

# domain_scheduler_inc: include-provider for -Ifunctionsystem/src/domain_scheduler/
# and -Ifunctionsystem/src/
cc_library(
    name = "domain_scheduler_inc",
    includes = ["."],
    deps = ["//functionsystem/src:src_root_inc"],
    visibility = ["//visibility:public"],
)

# domain_scheduler_lib — mirrors CMake's domain_scheduler_lib STATIC library
cc_library(
    name = "domain_scheduler_lib",
    srcs = glob([
        "domain_scheduler_launcher.cpp",
        "startup/**/*.cpp",
        "domain_scheduler_service/**/*.cpp",
        "underlayer_scheduler_manager/**/*.cpp",
        "instance_control/**/*.cpp",
        "flags/**/*.cpp",
        "domain_group_control/**/*.cpp",
    ]),
    hdrs = glob([
        "include/**/*.h",
        "**/*.h",
    ]),
    copts = COPTS + ["-fPIE"],
    deps = [
        ":domain_scheduler_inc",
        "//functionsystem/src/meta_store/client/cpp:meta_store_client",
        "//functionsystem/src/common:explorer",
        "//functionsystem/src/common:scheduler",
        "//functionsystem/src/common:common_flags",
        "//functionsystem/src/common:utils",
        "//functionsystem/src/common:heartbeat",
        "//functionsystem/src/common:kube_client",
        "//functionsystem/src/common:aksk",
        "//functionsystem/src/common:trace_adapter",
    ],
    visibility = ["//visibility:public"],
)

# domain_scheduler binary
cc_binary(
    name = "domain_scheduler",
    srcs = ["main.cpp"],
    copts = COPTS + ["-fPIE", "-fvisibility=hidden"],
    linkopts = ["-pie"],
    deps = [
        ":domain_scheduler_inc",
        ":domain_scheduler_lib",
        "//functionsystem/src/common:rpc",
        "//functionsystem/src/common:trace_adapter",
        "//functionsystem/src/common:all_schedule_plugins",
        "@com_google_protobuf//:protobuf",
        "@com_github_grpc_grpc//:grpc++",
        "@com_github_grpc_grpc//:gpr",
        "@litebus//:litebus",
        "@logs_sdk//:logs_sdk",
        "@securec//:securec",
    ],
    visibility = ["//visibility:public"],
)
