load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
load("@yuanrong_functionsystem//bazel:yr.bzl", "COPTS")

# function_agent_inc: include-provider for -Ifunctionsystem/src/function_agent/
# and -Ifunctionsystem/src/
cc_library(
    name = "function_agent_inc",
    includes = ["."],
    deps = ["//functionsystem/src:src_root_inc"],
    visibility = ["//visibility:public"],
)

# function_agent_common_types — header-only target for types used by trace_adapter.
# create_trace_helper.h (in common:trace_adapter) needs function_agent::DeployResult.
# This target avoids the circular dep: function_agent_lib→runtime_manager_lib→trace_adapter.
cc_library(
    name = "function_agent_common_types",
    hdrs = [
        "code_deployer/deployer.h",
        "common/types.h",
    ],
    copts = COPTS,
    deps = [
        ":function_agent_inc",
        "//functionsystem/src/common:posix_pb",
        "//functionsystem/src/common:status",
        "@litebus//:litebus",
    ],
    visibility = ["//visibility:public"],
)


# function_agent_flags — header-only target for kv_client dependency
# kv_client.h includes function_agent_flags.h; this avoids circular deps
cc_library(
    name = "function_agent_flags",
    hdrs = glob(["flags/**/*.h"]),
    copts = COPTS,
    deps = [
        ":function_agent_inc",
        "//functionsystem/src/common:common_flags",
    ],
    visibility = ["//visibility:public"],
)

# function_agent_lib — mirrors CMake's function_agent_lib STATIC library
cc_library(
    name = "function_agent_lib",
    srcs = glob(
        [
            "*.cpp",
            "common/**/*.cpp",
            "flags/**/*.cpp",
            "code_deployer/**/*.cpp",
            "driver/**/*.cpp",
            "network/**/*.cpp",
            "plugin/**/*.cpp",
        ],
        exclude = ["main.cpp"],
    ),
    hdrs = glob(["**/*.h"]),
    copts = COPTS + ["-fPIC"],
    deps = [
        ":function_agent_inc",
        "//functionsystem/src/common:rpc",
        "//functionsystem/src/common:metadata",
        "//functionsystem/src/common:kv_client",
        "//functionsystem/src/common:posix_pb",
        "//functionsystem/src/runtime_manager:runtime_manager_lib",
        "@obs_sdk//:obs_sdk",
        "@datasystem_sdk//:datasystem_sdk",
        "@minizip_sdk//:minizip_sdk",
        "@com_github_grpc_grpc//:grpc++",
    ],
    visibility = ["//visibility:public"],
)

# function_agent binary
cc_binary(
    name = "function_agent",
    srcs = ["main.cpp"],
    copts = COPTS + ["-fPIE"],
    linkopts = ["-pie"],
    deps = [
        ":function_agent_inc",
        ":function_agent_lib",
        "//functionsystem/src/common:rpc",
        "//functionsystem/src/common:posix_pb",
    ],
    visibility = ["//visibility:public"],
)
